--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-sass": "^4.14.0",
     "nuxt": "^2.0.0",
     "sass-loader": "^8.0.2",
+    "v-tooltip": "^2.0.3",
     "vue": "latest",
     "vue-i18n": "^8.15.3",
     "vue-ls": "^3.2.1",
