chore: update api ip

--- a/nginx/default-test.conf
+++ b/nginx/default-test.conf
@@ -13,11 +13,11 @@ server {
     }
 
     location /api {
-        proxy_pass http://172.105.204.106:2000/api;
+        proxy_pass http://@172.105.217.48:2000/api;
     }
 
     location /media {
-        proxy_pass http://172.105.204.106:2000/media;
+        proxy_pass http://@172.105.217.48:2000/media;
     }
 
 }
