--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - NGINX_PROXY_CONTAINER=nginx-proxy
 
   nginx:
-    container_name: "ezgo"
+    container_name: "nginx-container"
     build:
       context: .
       dockerfile: DockerfileNginx
@@ -52,10 +52,10 @@ services:
     restart: always
 
     environment:
-      - VIRTUAL_HOST=ezgo-buy.com
+      - VIRTUAL_HOST=li1871-48.members.linode.com
       - VIRTUAL_NETWORK=nginx-proxy
       - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST=ezgo-buy.com
+      - LETSENCRYPT_HOST=li1871-48.members.linode.com
       - LETSENCRYPT_EMAIL=max@conquers.co
     depends_on:
       - "frontend"
