--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue-ls": "^3.2.1",
     "vue-notification": "^1.3.20",
     "vue-toastification": "^0.8.0",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "latest"
   },
   "devDependencies": {
