--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lru-cache": "^5.1.1",
     "node-sass": "^4.14.0",
     "nuxt": "^2.0.0",
+    "nuxt-facebook-pixel-module": "^1.3.0",
     "sass-loader": "^8.0.2",
     "v-tooltip": "^2.0.3",
     "vue": "latest",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^26.0.1",
