--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,10 +52,10 @@ services:
     restart: always
 
     environment:
-      - VIRTUAL_HOST=li1871-48.members.linode.com
+      - VIRTUAL_HOST=havefununderwear.com
       - VIRTUAL_NETWORK=nginx-proxy
       - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST=li1871-48.members.linode.com
+      - LETSENCRYPT_HOST=havefununderwear.com
       - LETSENCRYPT_EMAIL=max@conquers.co
     depends_on:
       - "frontend"
