--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -54,10 +54,10 @@ services:
     restart: always
 
     environment:
-      - VIRTUAL_HOST=103.29.70.24
+      - VIRTUAL_HOST=li1543-24.members.linode.com
       - VIRTUAL_NETWORK=nginx-proxy
       - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST=103.29.70.24
+      - LETSENCRYPT_HOST=li1543-24.members.linode.com
       - LETSENCRYPT_EMAIL=max@conquers.co
     depends_on:
       - "frontend"
